# cuteInjector

./: .gitignore  README.md
.github/workflows/: codeberg-mirror.yml
cuteInjector/: CMakeLists.txt  CMakeSettings.json
cuteInjector/src/: Main.cpp  Settings.cpp  Settings.h  main.cpp
cuteInjector/src/data/: JsonSerializer.cpp  JsonSerializer.h  jsonSerializer.cpp  jsonSerializer.h
cuteInjector/src/definitions/: Themes.h
cuteInjector/src/helpers/: jsonSerializer.h
cuteInjector/src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowActions.cpp  MenuBar.cpp  MenuBar.h  Style.h  TextInfoWindow.cpp  WindowsTheme.cpp  WindowsTheme.h  mainWindow.cpp  mainWindow.h  mainWindow.ui  mainWindowActions.cpp  menuBar.cpp  menuBar.h  selectProcessDialog.cpp  selectProcessDialog.h  style.h  textInfoWindow.cpp  textInfoWindow.h
cuteInjector/src/ui/dialogs/: SelectProcessDialog.cpp  SelectProcessDialog.h  selectProcessDialog.cpp  selectProcessDialog.h
cuteInjector/src/ui/dialogs/settings/: HotKeySettingsLine.cpp  HotKeySettingsLine.h  HotKeySettingsTab.cpp  HotKeySettingsTab.h  SettingsDialog.cpp  SettingsDialog.h
cuteInjector/src/utils/: DllFile.cpp  dllFile.cpp  dllFile.h
cuteInjector/src/utils/injector/: Injector.cpp  Injector.h  injector.cpp
cuteInjector/src/utils/process/: Process.cpp  Process.h  ProcessManager.cpp  ProcessManager.h  process.cpp  process.h  processManager.cpp  processManager.h
x86Bridge/: CMakeLists.txt  main.cpp
